--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "tailwindcss": "^1.7.6",
     "vue": "^3.0.0-rc.1",
     "vue-router": "^4.0.0-beta.7"
   },
