--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
-node_modules
-.DS_Store
-*.local
+# Files and directories created by pub.
+.dart_tool/
+.packages
+
+# Conventional directory for build outputs.
+build/
+
+# Omit committing pubspec.lock for library packages; see
+# https://dart.dev/guides/libraries/private-files#pubspeclock.
+pubspec.lock
