--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: authorization_manager
-description: A starting point for Dart libraries or applications.
+description: Dart/Flutter authorization manager.
 version: 1.0.0
 # homepage: https://www.example.com
 repository: https://github.com/odroe/authorization_manager
